feat: Integrate custom entities

--- a/packages/locales/src/lang/en/entity.json
+++ b/packages/locales/src/lang/en/entity.json
@@ -8,5 +8,18 @@
     "entity.label.entity_minimum_value": "Minimum Value",
     "entity.label.entity_maximum_length": "Maximum Length",
     "entity.label.entity_minimum_length": "Minimum length",
-    "entity.label.entity_items": "Items"
+    "entity.label.entity_items": "Items",
+    "entity.label.value_source": "Value Source",
+    "entity.label.custom_entity": "Custom Entity",
+    "entity.label.historical_data": "Historical Data",
+    "common.button.reset": "Reset",
+    "entity.label.entity_type_of_access_readonly": "R",
+    "entity.label.entity_type_of_access_read_and_write": "RW",
+    "entity.label.entity_type_of_access_write": "W",
+    "entity.label.entity_type_of_string": "STRING",
+    "entity.label.entity_type_of_int": "INT",
+    "entity.label.entity_type_of_boolean": "BOOLEAN",
+    "entity.label.entity_type_of_float": "FLOAT",
+    "entity.label.set_enumeration_items": "Set Enumeration Items",
+    "entity.label.set_value": "Set Value"
 }
