--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -152,5 +152,8 @@
     "valid.input.value": "Input value: {0} only.",
     "valid.input.version": "The version number does not comply with the specification.",
     "valid.resp.at_least_one": "Please select at least one {1}.",
-    "common.label.create": "Create"
+    "common.label.create": "Create",
+    "common.label.export": "Export",
+    "common.label.update_time": "Update Time",
+    "common.label.label": "Label"
 }
