feat: user roles api phase 1

--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -161,5 +161,6 @@
     "common.label.chosen": "Chosen",
     "common.label.selected": "selected",
     "common.label.sort_type_newest_to_oldest": "Newest to oldest",
-    "common.label.sort_type_oldest_to_newest": "Oldest to Newest"
+    "common.label.sort_type_oldest_to_newest": "Oldest to Newest",
+    "common.label.deletion": "Deletion"
 }
