--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -163,5 +163,6 @@
     "common.label.selected": "selected",
     "common.label.sort_type_newest_to_oldest": "Newest to oldest",
     "common.label.sort_type_oldest_to_newest": "Oldest to Newest",
-    "common.label.deletion": "Deletion"
+    "common.label.deletion": "Deletion",
+    "common.label.creator": "Creator"
 }
