--- a/packages/locales/src/lang/en/user.json
+++ b/packages/locales/src/lang/en/user.json
@@ -1,33 +1,37 @@
 {
     "user.label.user_role": "Users and Roles",
-    "user.label.tab_name_users": "Users",
-    "user.label.tab_name_roles": "Roles",
+    "user.role.users_tab_name": "Users",
+    "user.role.roles_tab_name": "Roles",
     "user.message.not_data_roles_tip": "Not data, please add a role first.",
     "user.label.add_role": "Add role",
     "user.label.rename_role": "Rename role",
-    "user.role.tab_title_members": "Members",
-    "user.role.tab_title_functions": "Functions",
-    "user.role.tab_title_resources": "Resources",
+    "user.role.members_tab_title": "Members",
+    "user.role.functions_tab_title": "Functions",
+    "user.role.resources_tab_title": "Resources",
     "user.role.user_nickname": "User Name",
     "user.role.single_member_remove_tip": "Are you sure you to remove member: {0}?",
     "user.role.bulk_member_remove_tip": "Are you sure to remove these {0} members in bulk?",
     "user.role.add_user_member_modal_title": "Add Member",
     "user.role.delete_tip": "Deletion cannot be restored. Are you sure to delete role: {0}?",
-    "user.role.title_table_model": "Model",
-    "user.role.title_table_page": "Page",
-    "user.role.title_table_function": "Function",
-    "user.role.tab_title_resource_integration": "Integration Permission",
-    "user.role.tab_title_functions_resource_device": "Device Permission",
-    "user.role.tab_title_resources_resource_dashboard": "Dashboard Permission",
-    "user.role.title_table_integration_name": "Integration Name",
-    "user.role.title_table_integration_num_device": "Number of Devices",
-    "user.role.title_table_integration_num_entity": "Number of Entities",
-    "user.role.title_modal_integration_permission": "Add Integration Permission",
+    "user.role.model_table_title": "Model",
+    "user.role.page_table_title": "Page",
+    "user.role.function_table_title": "Function",
+    "user.role.resource_integration_tab_title": "Integration Permission",
+    "user.role.resource_device_tab_title": "Device Permission",
+    "user.role.resource_dashboard_tab_title": "Dashboard Permission",
+    "user.role.integration_name_table_title": "Integration Name",
+    "user.role.integration_num_device_table_title": "Number of Devices",
+    "user.role.integration_num_entity_table_title": "Number of Entities",
+    "user.role.integration_permission_modal_title": "Add Integration Permission",
     "user.role.integration_permission_add_tip": "添加集成后将允许访问该集成下的所有设备和独立设备外的实体数据。",
     "user.role.single_integration_remove_tip": "After removal, access to all devices under the integration and independent entities will no longer be allowed. Are you sure to remove integration: {0}?",
     "user.role.bulk_integration_remove_tip": "After removal, access to all devices under these integrations and independent entities will no longer be allowed. Are you sure to remove these {0} integrations in bulk？",
-    "user.role.title_modal_device_permission": "Add Device Permission",
+    "user.role.device_permission_modal_title": "Add Device Permission",
     "user.role.single_device_remove_tip": "Are you sure to remove device: {0}?",
     "user.role.bulk_device_remove_tip": "Are you sure to remove these {0} devices in bulk？",
-    "user.role.device_can_not_remove_tip": "Unable to remove, source integration is checked, please uncheck source integration first."
+    "user.role.device_can_not_remove_tip": "Unable to remove, source integration is checked, please uncheck source integration first.",
+    "user.role.dashboard_name_table_title": "Dashboard Name",
+    "user.role.dashboard_permission_modal_title": "Add Dashboard Permission",
+    "user.role.single_dashboard_remove_tip": "Are you sure to remove dashboard: {0}?",
+    "user.role.bulk_dashboard_remove_tip": "Are you sure to remove these {0} dashboards in bulk？"
 }
