--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -164,5 +164,6 @@
     "common.label.sort_type_newest_to_oldest": "Newest to oldest",
     "common.label.sort_type_oldest_to_newest": "Oldest to Newest",
     "common.label.deletion": "Deletion",
+    "common.label.bulk_deletion": "Bulk Deletion",
     "common.label.creator": "Creator"
 }
