--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -165,5 +165,7 @@
     "common.label.sort_type_oldest_to_newest": "Oldest to Newest",
     "common.label.deletion": "Deletion",
     "common.label.bulk_deletion": "Bulk Deletion",
-    "common.label.creator": "Creator"
+    "common.label.creator": "Creator",
+    "common.label.403_forbidden": "403 Forbidden",
+    "common.label.no_permissions": "No Permissions!"
 }
