--- a/packages/locales/src/lang/en/workflow.json
+++ b/packages/locales/src/lang/en/workflow.json
@@ -38,8 +38,8 @@
     "workflow.message.delete_tip": "Are you sure you want to delete the workflow? It cannot be restore after deletion.",
     "workflow.label.deletion": "Deletion",
     "workflow.editor.form_param_select_placeholder": "Enter or reference a variable",
-    "workflow.label.branch": "Branch{1}",
-    "workflow.label.parallel": "Parallel{1}",
+    "workflow.label.branch": "BRANCH{1}",
+    "workflow.label.parallel": "PARALLEL{1}",
     "workflow.label.no_log_record": "No log is recorded",
     "workflow.node.trigger_switch_label": "Context",
     "workflow.editor.form_param_timer_type": "Timer Type",
