--- a/packages/locales/src/lang/en/workflow.json
+++ b/packages/locales/src/lang/en/workflow.json
@@ -105,7 +105,7 @@
     "workflow.valid.invalid_edge_type": "The Edge (connecting node {1} and {2}) Type is invalid.",
     "workflow.valid.node_id_duplicated": "{1} and {2} Node ID is duplicated.",
     "workflow.valid.edge_id_duplicated": "The Edge (connecting node {1} and {2}) ID is duplicated.",
-    "workflow.node.service_helptext": "Please select the service you want to call first.",
+    "workflow.node.service_helper_text": "Please select the service you want to call first.",
     "workflow.node.input_variables": "Input Variables",
     "workflow.editor.config_panel_test_title": "Test {1}",
     "workflow.valid.invalid_url": "The {1} field value is not a valid URL.",
