feat: Modify the translation of dashboard.label_nearly_half_year

--- a/packages/locales/src/lang/en/dashboard.json
+++ b/packages/locales/src/lang/en/dashboard.json
@@ -26,6 +26,6 @@
     "dashboard.label_nearly_one_week": "Nearly one week",
     "dashboard.label_nearly_one_month": "Nearly one month",
     "dashboard.label_nearly_three_month": "Nearly three months",
-    "dashboard.label_nearly_half_year": "Nearly half week",
+    "dashboard.label_nearly_half_year": "Nearly half year",
     "dashboard.label_nearly_one_year": "Nearly one year"
 }
