--- a/packages/locales/src/lang/en/workflow.json
+++ b/packages/locales/src/lang/en/workflow.json
@@ -110,5 +110,9 @@
     "workflow.editor.config_panel_test_title": "Test {1}",
     "workflow.valid.invalid_url": "The {1} field value is not a valid URL.",
     "workflow.valid.invalid_email": "The {1} field value is not a valid email.",
-    "workflow.editor.node_test_tip": "Test this Node"
+    "workflow.editor.node_test_tip": "Test this Node",
+    "workflow.label.condition_operator_greater_than": "Greater Than",
+    "workflow.label.condition_operator_greater_than_or_equal": "Greater Equals",
+    "workflow.label.condition_operator_less_than": "Less Than",
+    "workflow.label.condition_operator_less_than_or_equal": "Less Equals"
 }
