feat: add user information display and operation components

--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -191,5 +191,6 @@
     "common.label.bulk_deletion": "Bulk Deletion",
     "common.label.creator": "Creator",
     "common.label.403_forbidden": "403 Forbidden",
-    "common.label.no_permissions": "No Permissions!"
+    "common.label.no_permissions": "No Permissions!",
+    "common.label.sign_out": "Sign out"
 }
