feat: user permission add 403 refresh button

--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -195,5 +195,6 @@
     "common.label.sign_out": "Sign out",
     "common.label.true": "True",
     "common.label.false": "False",
-    "common.label.language": "Language"
+    "common.label.language": "Language",
+    "common.label.refresh": "Refresh"
 }
